# aurin_impact_tracking_prototype

./: .gitignore  README.md  cli.py  data_loader.py  main.py  pyproject.toml  requirements.txt
components/: _constants.py  grant_trend_monitor.py  grants.py  header.py  patents.py  pdf_export.py  policy_documents.py  research_categories.py  research_trends_analysis.py  sidebar.py  tab_ai_tools.py
components/ai_providers/: gemini_provider.py  openrouter_provider.py
components/ai_summary/: __init__.py  base.py  component.py  gemini_provider.py
components/aurin_fundings/: __init__.py  grants.py
components/funding_signal/: component.py
components/grant_trend/: __init__.py  _constants.py  _helpers.py  funder_breakdown.py  monitor.py  signal_to_action.py  top_categories.py  trending_cards.py
components/media_monitor/: monitor.py
components/patents/: __init__.py  patents.py
components/policy_documents/: __init__.py  policy_documents.py
components/research_organisations/: __init__.py  affiliated_countries.py  affiliated_organisations.py
components/research_papers/: __init__.py  concepts.py  key_metrics.py  recent_papers.py  research_categories.py  sdg_categories.py  top_cited_articles.py  trends.py
components/research_trend/: _constants.py  _helpers.py  keyword_trends.py  monitor.py  signal_to_action.py  trending_cards.py
components/search_engine/: __init__.py  base.py  duckduckgo_provider.py  serpapi_provider.py
data/: __init__.py  capture.py  database.py  media_capture.py
data/AI agents/: aurin_policy_agent.py
