[project]
name = "aurin-impact-tracking-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dimcli>=0.7.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "pycountry>=23.0.0",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
    "wordcloud>=1.9.6",
]
